--- a/Frontend/Html(FrontEnd)/4_HTML_Forms/Assignment16.html
+++ b/Frontend/Html(FrontEnd)/4_HTML_Forms/Assignment16.html
@@ -1,6 +1,8 @@
 <html>
   <!-- html code goes here -->
 <body>
+<!-- html code goes here -->
+<!-- html code goes here -->
 <form method="post">
 <label for="name">Name</label>
 <input type="text" id="name" required>
@@ -16,20 +18,18 @@
 <input type="radio" id="female" name="gender" value="false" required>
 <br>
 
-<label for="laptop">Choose your laptop brand</label>
-<select name="laptop" id="laptop">
-  <option value="Apple" name="laptop">Apple</option>
-  <option value="Asus" name="laptop">Asus</option>
-  <option value="HP" name="laptop">HP</option>
+<label for="cars">Choose your laptop brand</label>
+<select name="cars" id="cars" required>
+  <option value="BMW" name="cars">BMW</option>
+  <option value="Audi" name="cars">Audi</option>
+  <option value="Mercedez" name="cars">Mercedez</option>
 </select>
 
 <br>
 <label for="age">Age</label>
 <input type="number" id="age" required>
 <br>
-<label for="portfolio">Portfolio</label>
-<input type="url" id="portfolio" required>
-<br>
+
 <label for="dob">DOB</label>
 <input type="date" id="dob" required>
 <br>
@@ -38,7 +38,8 @@
 <input type="password" id="password" required>
 <br>
 <button type="submit" id="submit">Submit</button>
-  
+
+</form>
 
 </body>
   
